[tool.poetry]
name = "groq-streamlit"
version = "0.1.0"
description = ""
authors = ["David Liebovitz <DavidL@northwestern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
langchain = "^0.1.16"
groq = "^0.5.0"
langchain-groq = "^0.1.3"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.33.0"
streamlit-chat = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
